k8s_config/deploy-git-sync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-git-sync
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      name: airflow-git-sync
  template:
    metadata:
      labels:
        name: airflow-git-sync
    spec:
      containers:
      - name: git-sync
        image: airflow-dags-deployment
        volumeMounts:
        # - name: git-secret
        #   mountPath: /etc/git-secret
        #   readOnly: true
        - name: airflow-dags
          mountPath: /export
        securityContext:
          runAsUser: 65533 # git-sync user
      volumes:
      # - name: git-secret
      #   secret:
      #     secretName: git-creds
      #     defaultMode: 0400
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: airflow-dags-airflow-0
      securityContext:
        fsGroup: 65533 # to make SSH key readable
