k8s_config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-proxy-headers: "X-Forwarded-Proto:https"

  name: airflow
spec:
  rules:
  - host: foo.bar.org
    http:
      paths:
      - backend:
          serviceName: airflow-main-webserver
          servicePort: http
        path: /
